@@ -1,3 +1,9 @@
+2010-10-21  Larry Jones  <lawrence.jones@siemens.com>
+
+	* rcs.c (apply_rcs_changes): Correct deltatext position sanity
+	checks.  Keep lines in sync so that linevector_free() doesn't
+	try to free garbage.
+
 2010-04-08  Larry Jones  <lawrence.jones@siemens.com>
 
 	* myndbm.c (mydbm_load_file): Initialize line_size.
